--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="title_main">Main</string>
     <string name="title_category">Category</string>
     <string name="title_product">Product</string>
-
+    <string name="title_feature">feature</string>
 </resources>
