ProductFragment & database & CartFragment

--- a/feature/dishes/src/main/res/values/strings.xml
+++ b/feature/dishes/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="no_network">No network connection</string>
+    <string name="add_to_cart_text">Add to cart</string>
+
 </resources>
