--- a/feature/dishes/src/main/res/values-ru/strings.xml
+++ b/feature/dishes/src/main/res/values-ru/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="no_network">Нет интернет соединения</string>
+    <string name="add_to_cart_text">Добавить в корзину</string>
+
 </resources>
