Toolbar & fake dishes repository & cart fragment & dishes fragment sorting & etc (finish)

--- a/feature/account/src/main/res/values/strings.xml
+++ b/feature/account/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="no_dishes">No items in cart</string>
-
+    <string name="coming_soon">Coming soon</string>
 </resources>
