--- a/feature/cart/src/main/res/values-ru/strings.xml
+++ b/feature/cart/src/main/res/values-ru/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="no_network">Нет интернет соединения</string>
+    <string name="no_dishes">Нет элементов в корзине</string>
 
 </resources>
